jgrapht-1.5.1
- https://github.com/jgrapht/jgrapht/releases/tag/jgrapht-1.5.1